--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             </p>
     </div>
     <div class="bg-image bg-app-plate col-6 tall-70"> 
-        <!-- background image bed -->
+        <!-- background image app plate -->
     </div>
     <div class="bg-image bg-chicken-plate col-6 tall-70"> 
-        <!-- background image pug -->
+        <!-- background image chicken -->
     </div>
     <div class="padded col-6-middle"> 
         <h2> so soft you'll <span class="featured-text">melt</span> </h2>
@@ -112,7 +112,7 @@
 </section>
 
 <!---------------- Imgage banner -------------->
-<section class="padded text-center bg-pillow tall-70 grid bg-image">
+<section class="padded text-center bg-fork tall-70 grid bg-image">
     <div class="col-12-middle">         
         <h3 class="big-text"> 
             <span class="small-text font-weight-normal">never underestimate the power of</span>
